<resources>
    <string name="app_name">Incrementum</string>
    <string name="habits">Habits</string>
    <string name="habit_name">Habit Name</string>
    <string name="tracking_length">Tracking Length</string>
    <string name="save">Save</string>
    <string name="trigger_selections_go_here">TRIGGER SELECTIONS GO HERE</string>
    <string name="triggers">Triggers</string>
    <string name="description">Description</string>
    <string name="add_journal">Add Journal Entry</string>
    <string name="add_journal_feeling">How are you feeling today?</string>
    <string name="journal_trigger">Add New Trigger</string>
    <string name="journal_entry_hint">Today, I am …</string>
    <string name="journal_trigger_hint">Add a new trigger…</string>
    <string name="view_journal">JOURNAL ENTRIES FOR </string>
    <string name="title_activity_log_hobbies">LogHobbiesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="my_app_id">incrementum-xjkms</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="journal_habit_title">What triggered your habit today?</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="other_people">Other People</string>
    <string name="preceding_event">Preceding Event</string>
    <string name="emotional_state">Emotional State</string>
    <string name="trigger_time">When does it happen?</string>
    <string name="morning">morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">evening</string>
    <string name="night">night</string>
    <string name="moodTitle">How are you feeling today?</string>
    <string name="what_were_you_doing_before_you_broke_your_habit">What were you doing before you broke your habit?</string>
    <string name="continue_text">Continue</string>
</resources>
