<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@color/lightGreyTheme"
  android:fitsSystemWindows="true">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="56dp"
    android:paddingRight="24dp"
    android:paddingBottom="56dp">

    <TextView
      android:id="@+id/textView4"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dp"
      android:gravity="center"
      android:text="@string/journal_habit_title"
      android:textAlignment="center"
      android:textColor="@color/darkGrey"
      android:textSize="16sp"
      android:textStyle="bold" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="horizontal">

      <ToggleButton
        android:id="@+id/otherPeople"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/lightBlueTheme"
        android:checked="false"
        android:text="@string/togglebutton"
        android:textColor="@color/darkGrey"
        android:textOff="@string/other_people"
        android:textOn="@string/other_people" />

      <ToggleButton
        android:id="@+id/precedingEvent"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/lightBlueTheme"
        android:checked="false"
        android:text="@string/togglebutton"
        android:textColor="@color/darkGrey"
        android:textOff="@string/preceding_event"
        android:textOn="@string/preceding_event" />

      <ToggleButton
        android:id="@+id/emotionalState"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/lightBlueTheme"
        android:checked="false"
        android:text="@string/togglebutton"
        android:textColor="@color/darkGrey"
        android:textOff="@string/emotional_state"
        android:textOn="@string/emotional_state" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="horizontal">

      <ToggleButton
        android:id="@+id/location"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/lightBlueTheme"
        android:checked="true"
        android:text="@string/togglebutton"
        android:textColor="@color/darkGrey"
        android:textOff="@string/location"
        android:textOn="@string/location" />

      <ToggleButton
        android:id="@+id/time"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/lightBlueTheme"
        android:checked="false"
        android:text="@string/togglebutton"
        android:textColor="@color/darkGrey"
        android:textOff="@string/time"
        android:textOn="@string/time" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="horizontal">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Your Own: "
        android:textAlignment="textStart"
        android:textColor="@color/darkGrey"
        android:textSize="16sp" />

      <EditText
        android:id="@+id/own"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />
    </LinearLayout>

    <TextView
      android:id="@+id/textView5"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:layout_marginBottom="10dp"
      android:text="@string/trigger_time"
      android:textAlignment="center"
      android:textSize="16sp"
      android:textStyle="bold" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="horizontal">

      <ToggleButton
        android:id="@+id/morning"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/lightBlueTheme"
        android:checked="false"
        android:text="@string/togglebutton"
        android:textColor="@color/darkGrey"
        android:textOff="@string/morning"
        android:textOn="@string/morning" />

      <ToggleButton
        android:id="@+id/noon"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/lightBlueTheme"
        android:checked="false"
        android:text="@string/togglebutton"
        android:textColor="@color/darkGrey"
        android:textOff="@string/afternoon"
        android:textOn="@string/afternoon" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="horizontal">

      <ToggleButton
        android:id="@+id/evening"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/lightBlueTheme"
        android:checked="true"
        android:text="@string/togglebutton"
        android:textColor="@color/darkGrey"
        android:textOff="@string/evening"
        android:textOn="@string/evening" />

      <ToggleButton
        android:id="@+id/night"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/lightBlueTheme"
        android:checked="false"
        android:text="@string/togglebutton"
        android:textColor="@color/darkGrey"
        android:textOff="@string/night"
        android:textOn="@string/night" />

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="100dp"
      android:gravity="center"
      android:orientation="horizontal">

      <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@color/lightGreyTheme"
        android:padding="10dp"
        android:text="Back"
        android:textColor="@color/darkGrey" />

      <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_red"
        android:padding="10dp"
        android:text="@string/save"
        android:textColor="@color/cremeTheme" />
    </LinearLayout>
  </LinearLayout>
</ScrollView>
