<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".AddJournalActivity">

  <TextView
    android:id="@+id/title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/add_journal"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.07" />

  <TextView
    android:id="@+id/thoughtsTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="45dp"
    android:layout_marginLeft="45dp"
    android:layout_marginTop="89dp"
    android:text="@string/add_journal_feeling"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <EditText
    android:id="@+id/journalEntry"
    android:layout_width="321dp"
    android:layout_height="210dp"
    android:layout_marginTop="123dp"
    android:ems="10"
    android:gravity="start|top"
    android:hint="@string/journal_entry_hint"
    android:importantForAutofill="no"
    android:inputType="textShortMessage|textLongMessage|textMultiLine|textNoSuggestions"
    android:singleLine="false"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/journalTrigger"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="45dp"
    android:layout_marginTop="404dp"
    android:text="@string/journal_trigger"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <EditText
    android:id="@+id/newTrigger"
    android:layout_width="323dp"
    android:layout_height="39dp"
    android:layout_marginStart="44dp"
    android:layout_marginTop="440dp"
    android:ems="10"
    android:hint="@string/journal_trigger_hint"
    android:importantForAutofill="no"
    android:inputType="textNoSuggestions"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/addJournal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:layout_marginEnd="176dp"
      android:layout_marginRight="51dp"
      android:layout_marginBottom="142dp"
      android:text="@string/save"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  <com.google.android.material.bottomnavigation.BottomNavigationView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/bottom_navigation"
      app:itemBackground="@color/colorPrimary"
      app:itemTextColor="@drawable/selector"
      app:itemIconTint="@drawable/selector"
      app:menu="@menu/menu_navigation"
      android:layout_alignParentBottom="true"/>

</RelativeLayout>
