<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/habitname"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddHabitActivity">

    <TextView
        android:id="@+id/HabitNameText"
        android:layout_width="132dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="98dp"
        android:text="@string/habit_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="177dp"
        android:layout_height="58dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/HabitNameText"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/length"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="165dp"
        android:layout_height="39dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="74dp"
        android:max="6"
        android:progress="1"
        app:layout_constraintStart_toEndOf="@+id/TLtext"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/TLtext"
        android:layout_width="119dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="57dp"
        android:text="@string/tracking_length"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HabitNameText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="146dp"
        android:layout_height="91dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="73dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TLtext"
        tools:text="How does this habit affect your life style?" />

    <EditText
        android:id="@+id/Description"
        style="@android:style/Widget.AutoCompleteTextView"
        android:layout_width="231dp"
        android:layout_height="192dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="69dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/length" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="295dp"
        android:layout_marginBottom="26dp"
        android:text="Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Continue" />
</androidx.constraintlayout.widget.ConstraintLayout>